--- a/src/app/product-image/product-image.component.html
+++ b/src/app/product-image/product-image.component.html
@@ -1,1 +1,6 @@
 <p>Product Image in full size</p>
+<iframe
+  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR3j_Cqa7jkZtbeQ-9Hmncvl2ItmnxnOfjpgSDj4aGV4CAbiRtL3sEJ_a20QDa-xmL9KSk&usqp=CAU"
+  height="200"
+  width="300"
+></iframe>
